--- a/style.css
+++ b/style.css
@@ -1,1 +1,27 @@
-p { background-color: red; }
+h1 {
+    color: blue;
+}
+
+h2 {
+    color: maroon;
+}
+
+h3 {
+    color: maroon;
+}
+
+strong {
+    color: maroon;
+}
+
+ul {
+    color: fuchsia;
+}
+
+.jatko {
+    color: red;
+}
+
+p {
+    color: maroon;
+}
