--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,41 @@
 .first-box-container {
     position: relative;
-    width: 200px;
-    height: 100px;
+    width: 110px;
+    height: 70px;
     background-color: red;
+    padding: 40px;
+    outline: 10px solid;
+    outline-color: green;
+    
 }
 
 .second-box-container {
     position: relative;
-    width: 200px;
-    height: 100px;
+    width: 110px;
+    height: 70px;
     background-color: yellow;
-    left: 250px;
-    top: -117px;
+    left: 300px;
+    top: -150px;
+    padding: 40px;
+    outline: 10px solid;
+    outline-color: red;
+
 }
 
 .third-box-container {
     position: relative;
-    width: 200px;
-    height: 100px;
+    width: 110px;
+    height: 70px;
     background-color: green;
-    left: 500px;
-    top: -234px;
+    left: 600px;
+    top: -300px;
+    padding: 40px;
+    outline: 10px solid;
+    outline-color: yellow;
 
 }
+
+p {
+    color: blue;
+}
+
